Adding Picker's Supply to shop list.

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
 			<li><a href=http://www.musurgia.com target=_blank>Musurgia</a>, Brooklyn, NY.</li>
 			<li><a href=http://normansrareguitars.com target=_blank>Norman's Rare Guitars</a>, Tarzana, CA.</li>
 			<li><a href=http://www.picknparlor.com target=_blank>Olde Town Pickin' Parlor</a>, Arvada, CO.</li>
+			<li><a href=http://pickerssupply.com target=_blank>Picker’s Supply</a>, Fredericksburg, VA.</li>
 			<li><a href=http://www.vintageinstruments.com target=_blank>Players Vintage Instruments</a>, Inverness, CA.</li>
 			<li><a href=http://www.retrofret.com target=_blank>Retrofret</a>, Vintage Brooklyn, NY.</li>
 			<li><a href=http://www.rivingtonguitars.com target=_blank>Rivington Guitars</a>, Mahattan, NY.</li>
